testsuite/bsc.driver/imports/TestExcludeBad.bs.bsc-out.expected
checking package dependencies
compiling TestExcludeBad.bs
Error: "TestExcludeBad.bs", line 6, column 8: (T0004)
  Unbound variable `a'
