testsuite/bsc.driver/imports/TestExcludeBad.bs
package TestExcludeBad where

import Exclude

d :: Integer
d = b + a * b